<resources>
    <string name="app_name">Cryptogram</string>
    <string name="next">next</string>
    <string name="again">one more time?</string>
    <string-array name="lost">
        <item>LOL</item>
        <item>Noooooot...</item>
        <item>Better luck next time</item>
    </string-array>
    <string name="level">level</string>
    <string name="totor">The number corresponds to the letter. You can click on an empty field and select a letter on the keyboard that will be in this field.</string>
    <string name="choose_field_for_hint">click on the empty field</string>

    <string-array name="letter">
        <item name="first">l</item>
        <item name="second">e</item>
        <item name="third">t</item>
        <item name="fourth">r</item>
    </string-array>

    <string name="quote_tutor">Fall seven times and get up eight times</string>
    <string name="author_tutor">Japanese wisdom</string>
    <string name="lang_ru">ru</string>
    <string name="en">en</string>
    <string name="change_language">Change language</string>
    <string name="continue_">continue</string>
    <string name="repeat">repeat again</string>
    <string name="lives_is_out">Lives is out</string>
    <string name="buy_additional_tips">Buy additional hints</string>
    <string name="_3_hints_for_18">3 hints for 18₽</string>

</resources>