<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/warning"
            android:padding="20dp"
            android:textSize="20sp"
            android:text="@string/lives_is_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/continue_defeat"
            android:drawableEnd="@drawable/smart_display_24dp_5f6368_fill0_wght300_grad0_opsz24"
            android:text="@string/continue_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/repeat"
            android:text="@string/repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>