<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/change_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/radioButtonRu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lang_ru" />

            <RadioButton
                android:id="@+id/radioButtonEn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/en" />
        </RadioGroup>

    </LinearLayout>
    <Button
        android:id="@+id/ok_text"
        android:textSize="20sp"
        android:text="ok"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</FrameLayout>